--- a/index.html
+++ b/index.html
@@ -1,43 +1,120 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Tea Website Website</title>
     <script src="https://cdn.tailwindcss.com"></script>
 
     <script>
-        tailwind.config = {
-          theme: {
-            extend: {
-              colors: {
-                clifford: '#da373d',
-              }
-            }
-          }
-        }
-      </script
+      tailwind.config = {
+        theme: {
+          extend: {
+            colors: {
+              clifford: "#da373d",
+            },
+          },
+        },
+      };
+    </script>
 
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Manrope:wght@200..800&display=swap"
+      rel="stylesheet"
+    />
+    <script
+      src="https://kit.fontawesome.com/7ea9f647cf.js"
+      crossorigin="anonymous"
+    ></script>
+  </head>
+  <body>
+    <header class="xl:max-w-screen-xl mx-auto mb-40">
+      <section class="mt-16 xl:flex flex-row ">
+        <div class="space-y-7">
+          <h1 class="text-7xl font-extrabold text-[#1C1C1C]">
+            It's good <br />
+            tea time at The <br />
+            Tea House
+          </h1>
+          <p class="text-[#777777] text-lg font-medium">
+            Tea and Botanical Solutions Supplier Give Optimum <br />
+            Satisfaction To Your Taste Buds.
+          </p>
+          <button
+            class="p-5 text-xl font-bold text-[#FFFFFF] bg-gradient-to-r from-[#FF0000] to-[#FF8938] rounded-md"
+          >
+            Explore More <i class="fa-solid fa-arrow-right -rotate-45"></i>
+          </button>
+        </div>
 
+        <div class="relative ml-20">
+          <img src="images/banner.png" alt="" srcset="" class="max-w-2xl" />
 
-
-
-
-
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Fira+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Manrope:wght@200..800&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Quicksand:wght@300..700&family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
-<script src="https://kit.fontawesome.com/7ea9f647cf.js" crossorigin="anonymous"></script>
-</head>
-<body>
-    <header>
-
+          <div
+            class="absolute bottom-8 left-24 flex items-center bg-white rounded-md shadow px-6 py-4 max-w-64 top"
+          >
+            <div>
+              <i class="fa-solid fa-star mr-3 text-[#FFDC64] text-2xl"></i>
+            </div>
+            <div>
+              <h1 class="text-lg font-semibold">5.00</h1>
+              <p class="text-[#777777] text-lg font-medium">
+                Trust Pilot Ratings
+              </p>
+            </div>
+          </div>
+        </div>
+      </section>
     </header>
-    <main>
 
+    <main class="max-w-screen-xl mx-auto">
+      <section class="text-center mb-32">
+        <h1 class="mb-5 font-extrabold text-5xl">Our Featured Products</h1>
+        <p class="mb-12 font-medium text-md text-[#777777]">
+          There are many variations of passages of Lorem Ipsum available, but
+          the majority have suffered alteration in some form,<br />
+          by injected humour, or randomised words which don't look even slightly
+          believable.
+        </p>
+        <div class="grid xl:grid-cols-4 grid-cols-1 gap-4">
+          <div class="bg-gradient-to-r from-[#F4F4F4] to-[#efeeee] p-7">
+            <img src="images/tea-1.png" alt="" class="mx-auto mb-7" />
+
+            <h1 class="font-extrabold text-2xl mb-2">Milk Tea</h1>
+            <p class="font-semibold text-base text-[#777777]">
+              Creamer could be replaced<br />
+              by fresh milk
+            </p>
+          </div>
+          <div class="bg-gradient-to-r from-[#F4F4F4] to-[#efeeee] p-7">
+            <img src="images/tea-2.png" alt="" class="mx-auto mb-7" />
+            <h1 class="font-extrabold text-2xl mb-2">Black Tea</h1>
+            <p class="font-semibold text-base text-[#777777]">
+              Creamer could be replaced<br />
+              by fresh milk
+            </p>
+          </div>
+          <div class="bg-gradient-to-r from-[#F4F4F4] to-[#efeeee] p-7">
+            <img src="images/tea-3.png" alt="" class="mx-auto mb-7" />
+            <h1 class="font-extrabold text-2xl mb-2">Lemon Tea</h1>
+            <p class="font-semibold text-base text-[#777777]">
+              Creamer could be replaced<br />
+              by fresh milk
+            </p>
+          </div>
+          <div class="bg-gradient-to-r from-[#F4F4F4] to-[#efeeee] p-7">
+            <img src="images/tea-4.png" alt="" class="mx-auto mb-7" />
+            <h1 class="font-extrabold text-2xl mb-2">Green Tea</h1>
+            <p class="font-semibold text-base text-[#777777]">
+              Creamer could be replaced<br />
+              by fresh milk
+            </p>
+          </div>
+        </div>
+      </section>
     </main>
-    <footer>
-        
-    </footer>
-</body>
+    <footer></footer>
+  </body>
 </html>
