--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
   </head>
   <body>
     <header class="xl:max-w-screen-xl mx-auto mb-40">
-      <section class="mt-16 xl:flex flex-row ">
+      <section class="mt-16 xl:flex flex-row">
         <div class="space-y-7">
           <h1 class="text-7xl font-extrabold text-[#1C1C1C]">
             It's good <br />
@@ -49,11 +49,16 @@
           </button>
         </div>
 
-        <div class="relative ml-20">
-          <img src="images/banner.png" alt="" srcset="" class="max-w-2xl" />
+        <div class="relative xl:ml-20 ml-6">
+          <img
+            src="images/banner.png"
+            alt=""
+            srcset=""
+            class="xl:max-w-2xl max-w-sm"
+          />
 
           <div
-            class="absolute bottom-8 left-24 flex items-center bg-white rounded-md shadow px-6 py-4 max-w-64 top"
+            class="absolute xl:bottom-8 bottom-5  xl:left-24 left-10  flex items-center bg-white rounded-md shadow px-6 py-4 max-w-64 top"
           >
             <div>
               <i class="fa-solid fa-star mr-3 text-[#FFDC64] text-2xl"></i>
@@ -69,7 +74,7 @@
       </section>
     </header>
 
-    <main class="max-w-screen-xl mx-auto">
+    <main class="xl:max-w-screen-xl max-w-screen-sm mx-auto">
       <section class="text-center mb-32">
         <h1 class="mb-5 font-extrabold text-5xl">Our Featured Products</h1>
         <p class="mb-12 font-medium text-md text-[#777777]">
@@ -79,7 +84,9 @@
           believable.
         </p>
         <div class="grid xl:grid-cols-4 grid-cols-1 gap-4">
-          <div class="bg-gradient-to-r from-[#F4F4F4] to-[#efeeee] p-7">
+          <div
+            class="bg-gradient-to-r from-[#F4F4F4] to-[#efeeee] p-7 rounded-xl"
+          >
             <img src="images/tea-1.png" alt="" class="mx-auto mb-7" />
 
             <h1 class="font-extrabold text-2xl mb-2">Milk Tea</h1>
@@ -88,7 +95,9 @@
               by fresh milk
             </p>
           </div>
-          <div class="bg-gradient-to-r from-[#F4F4F4] to-[#efeeee] p-7">
+          <div
+            class="bg-gradient-to-r from-[#F4F4F4] to-[#efeeee] p-7 rounded-xl"
+          >
             <img src="images/tea-2.png" alt="" class="mx-auto mb-7" />
             <h1 class="font-extrabold text-2xl mb-2">Black Tea</h1>
             <p class="font-semibold text-base text-[#777777]">
@@ -96,7 +105,9 @@
               by fresh milk
             </p>
           </div>
-          <div class="bg-gradient-to-r from-[#F4F4F4] to-[#efeeee] p-7">
+          <div
+            class="bg-gradient-to-r from-[#F4F4F4] to-[#efeeee] p-7 rounded-xl"
+          >
             <img src="images/tea-3.png" alt="" class="mx-auto mb-7" />
             <h1 class="font-extrabold text-2xl mb-2">Lemon Tea</h1>
             <p class="font-semibold text-base text-[#777777]">
@@ -104,7 +115,9 @@
               by fresh milk
             </p>
           </div>
-          <div class="bg-gradient-to-r from-[#F4F4F4] to-[#efeeee] p-7">
+          <div
+            class="bg-gradient-to-r from-[#F4F4F4] to-[#efeeee] p-7 rounded-xl"
+          >
             <img src="images/tea-4.png" alt="" class="mx-auto mb-7" />
             <h1 class="font-extrabold text-2xl mb-2">Green Tea</h1>
             <p class="font-semibold text-base text-[#777777]">
@@ -112,6 +125,210 @@
               by fresh milk
             </p>
           </div>
+        </div>
+      </section>
+
+      <section class="xl:flex flex-row mb-32">
+        <div
+          class="grid grid-cols-1 xl:grid-cols-2 grid-rows-1 xl:grid-rows-3 xl:gap-7 gap-4 xl:w-1/2 w-full mr-16"
+        >
+          <div
+            class="bg-gradient-to-r from-red-600 to-red-50 opacity-10 rounded-xl shadow-lg xl:row-span-1"
+          ></div>
+
+          <div
+            class="bg-orange-100 rounded-xl 0 xl:row-span-2 row-span-1 p-10 shadow-lg"
+          >
+            <img src="images/fresh-1.png" alt="" class="mx-auto" />
+          </div>
+
+          <div
+            class="bg-lime-100 rounded-xl xl:row-span-2 row-span-1 p-10 shadow-lg"
+          >
+            <img src="images/fresh-2.png" alt="" class="mx-auto" />
+          </div>
+
+          <div
+            class="bg-gradient-to-r from-[#706E6E] to-[#FFFFFF] opacity-10 rounded-xl shadow-lg row-span-1"
+          ></div>
+        </div>
+
+        <div class="w-1/2 text-center xl:text-start mx-auto">
+          <h1 class="mb-10 font-extrabold text-5xl">
+            Great Tea, Freshly <br />Presented
+          </h1>
+          <p class="mb-10 font-medium text-md text-[#777777]">
+            The meaning of gong cha is chanese is to provide the best tea to
+            emperor <br />
+            from all possessions . It represents the highest quality and self
+            expectation.<br />
+            Establishing in 2006, Gong cha had been deeply appreciated by its
+            custoers <br />
+            because of good words of mouth and unique customized service
+            orginated from Taiwan.
+          </p>
+          <h1 class="mb-8 font-extrabold text-xl">Unique Taste</h1>
+          <p class="mb-8 font-medium text-base text-[#777777]">
+            A Unique and different style from other teapots gives a<br />
+            luxurious and minimalist impression
+          </p>
+          <h1 class="mb-8 font-extrabold text-xl">Premium Quality</h1>
+          <p class="font-medium text-base text-[#777777]">
+            Premium Quality that makes tea more elegant and more<br />
+            durable when you use it.
+          </p>
+        </div>
+      </section>
+
+      <section
+        class="bg-gradient-to-r from-[#FF8938] to-[#FF0000] px-20 xl:flex flex-row bg-[url()] pb-10 pt-5 lg:mb-36 mb-10 rounded-b-xl"
+      >
+        <div class="mt-40 mb-32 max-w-md space-y-5">
+          <h1 class="font-extrabold text-5xl text-white">
+            Meet Our Super Clients
+          </h1>
+          <p class="font-medium text-base text-white">
+            There are many variations of passages of Lorem Ipsum available, but
+            the majority have suffered alteration in some form, by injected
+            humour, or randomised words which don't look even slightly
+            believable.
+          </p>
+          <button
+            class="bg-white px-7 py-3 rounded-lg text-orange-600 font-bold text-xl"
+          >
+            Show All
+          </button>
+        </div>
+
+        <div class="xl:ml-10 ml-1 mt-24 relative mb-16">
+          <div
+            class="xl:w-3/4 w-full bg-white p-12 relative rounded-lg opacity-40 space-y-2 xl:left-28 left-4 xl:mb-6 mb-20 z-0"
+          >
+            <img
+              src="images/client.png"
+              alt=""
+              class="border border-4 text-white rounded-full absolute -left-8 -top-7"
+            />
+            <p class="text-base text-[#777777]">
+              We are providing the best and suitable home insurance services for
+              the people who are interested to treatment
+            </p>
+            <div class="flex justify-between">
+              <div>
+                <h1>Ilham Yuda</h1>
+                <h1>Businessman</h1>
+              </div>
+              <div>
+                <img src="images/circles.png" alt="" />
+              </div>
+            </div>
+          </div>
+
+          <div class="relative">
+            <div
+              class="xl:w-3/4 w-full bg-white p-12 absolute rounded-lg space-y-2 xl:-top-32 -top-48 z-10"
+            >
+              <img
+                src="images/client.png"
+                alt=""
+                class="border border-4 text-white rounded-full absolute -left-8 -top-7"
+              />
+              <p class="text-base text-[#777777]">
+                We are providing the best and suitable home insurance services
+                for the people who are interested to treatment
+              </p>
+              <div class="flex justify-between">
+                <div>
+                  <h1>Ilham Yuda</h1>
+                  <h1>Businessman</h1>
+                </div>
+                <div>
+                  <img src="images/circles.png" alt="" />
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div
+            class="xl:w-3/4 w-full bg-white p-12 relative rounded-lg opacity-40 space-y-2 xl:left-28 left-4 z-0"
+          >
+            <img
+              src="images/client.png"
+              alt=""
+              class="border border-4 text-white rounded-full absolute -left-8 -top-7"
+            />
+            <p class="text-base text-[#777777]">
+              We are providing the best and suitable home insurance services for
+              the people who are interested to treatment
+            </p>
+            <div class="flex justify-between">
+              <div>
+                <h1>Ilham Yuda</h1>
+                <h1>Businessman</h1>
+              </div>
+              <div>
+                <img src="images/circles.png" alt="" />
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <section class="text-center space-y-5 xl:mb-32 mb-20">
+        <h1 class="font-extrabold text-5xl text-[#1C1C1C]">News & Events</h1>
+        <p class="font-medium text-base text-[#777777] px-28">
+          There are many variations of passages of Lorem Ipsum available, but
+          the majority have suffered alteration in some form, by injected
+          humour, or randomised words which don't look even slightly believable.
+        </p>
+        <div class="grid xl:grid-cols-3 grid-cols-1 xl:gap-9 gap-7" >
+          <div class="text-start border border-1 border-slate-400 p-5 rounded-xl xl:mx-0 mx-6" >
+            <div class="mb-2">
+              <img src="images/news-1.png" alt="" class="w-full" />
+            </div>
+            <div class="p-4 space-y-4">
+              <p class="font-medium text-base text-[#777777]">Feb 05, 2027</p>
+              <h1 class="font-extrabold text-xl text-[#1C1C1C]">
+                Collecting 8 points for discount
+              </h1>
+              <p class="font-medium text-base text-[#777777]">
+                There are many variations of passages of Lorem Ipsum available.
+              </p>
+              <h1 class="font-bold text-base text-[#1C1C1C]">Learn More</h1>
+            </div>
+          </div>
+          <div>
+            <div class="text-start border border-1 border-slate-400 p-5 rounded-xl xl:mx-0 mx-6" >
+              <div class="mb-2">
+                <img src="images/news-2.png" alt="" class="w-full" />
+              </div>
+              <div class="p-4 space-y-4">
+                <p class="font-medium text-base text-[#777777]">Feb 05, 2027</p>
+                <h1 class="font-extrabold text-xl text-[#1C1C1C]">
+                  Collecting 8 points for discount
+                </h1>
+                <p class="font-medium text-base text-[#777777]">
+                  There are many variations of passages of Lorem Ipsum available.
+                </p>
+                <h1 class="font-bold text-base text-[#1C1C1C]">Learn More</h1>
+              </div>
+            </div>
+            </div>
+            <div class="text-start border border-1 border-slate-400 p-5 rounded-xl xl:mx-0 mx-6" >
+              <div class="mb-2">
+                <img src="images/news-3.png" alt="" class="w-full" />
+              </div>
+              <div class="p-4 space-y-4">
+                <p class="font-medium text-base text-[#777777]">Feb 05, 2027</p>
+                <h1 class="font-extrabold text-xl text-[#1C1C1C]">
+                  Collecting 8 points for discount
+                </h1>
+                <p class="font-medium text-base text-[#777777]">
+                  There are many variations of passages of Lorem Ipsum available.
+                </p>
+                <h1 class="font-bold text-base text-[#1C1C1C]">Learn More</h1>
+              </div>
+            </div>
         </div>
       </section>
     </main>
