--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
   </head>
   <body>
     <header class="xl:max-w-screen-xl mx-auto mb-40">
-      <section class="mt-16 xl:flex flex-row">
+      <section class="mt-16 xl:flex flex-row xl:ml-0 ml-2">
         <div class="space-y-7">
           <h1 class="text-7xl font-extrabold text-[#1C1C1C]">
             It's good <br />
@@ -58,7 +58,7 @@
           />
 
           <div
-            class="absolute xl:bottom-8 bottom-5  xl:left-24 left-10  flex items-center bg-white rounded-md shadow px-6 py-4 max-w-64 top"
+            class="absolute xl:bottom-8 bottom-5 xl:left-24 left-10 flex items-center bg-white rounded-md shadow px-6 py-4 max-w-64 top"
           >
             <div>
               <i class="fa-solid fa-star mr-3 text-[#FFDC64] text-2xl"></i>
@@ -281,8 +281,10 @@
           the majority have suffered alteration in some form, by injected
           humour, or randomised words which don't look even slightly believable.
         </p>
-        <div class="grid xl:grid-cols-3 grid-cols-1 xl:gap-9 gap-7" >
-          <div class="text-start border border-1 border-slate-400 p-5 rounded-xl xl:mx-0 mx-6" >
+        <div class="grid xl:grid-cols-3 grid-cols-1 xl:gap-9 gap-7">
+          <div
+            class="text-start border border-1 border-slate-400 p-5 rounded-xl xl:mx-0 mx-6"
+          >
             <div class="mb-2">
               <img src="images/news-1.png" alt="" class="w-full" />
             </div>
@@ -298,7 +300,9 @@
             </div>
           </div>
           <div>
-            <div class="text-start border border-1 border-slate-400 p-5 rounded-xl xl:mx-0 mx-6" >
+            <div
+              class="text-start border border-1 border-slate-400 p-5 rounded-xl xl:mx-0 mx-6"
+            >
               <div class="mb-2">
                 <img src="images/news-2.png" alt="" class="w-full" />
               </div>
@@ -308,30 +312,102 @@
                   Collecting 8 points for discount
                 </h1>
                 <p class="font-medium text-base text-[#777777]">
-                  There are many variations of passages of Lorem Ipsum available.
+                  There are many variations of passages of Lorem Ipsum
+                  available.
                 </p>
                 <h1 class="font-bold text-base text-[#1C1C1C]">Learn More</h1>
               </div>
             </div>
+          </div>
+          <div
+            class="text-start border border-1 border-slate-400 p-5 rounded-xl xl:mx-0 mx-6"
+          >
+            <div class="mb-2">
+              <img src="images/news-3.png" alt="" class="w-full" />
             </div>
-            <div class="text-start border border-1 border-slate-400 p-5 rounded-xl xl:mx-0 mx-6" >
-              <div class="mb-2">
-                <img src="images/news-3.png" alt="" class="w-full" />
-              </div>
-              <div class="p-4 space-y-4">
-                <p class="font-medium text-base text-[#777777]">Feb 05, 2027</p>
-                <h1 class="font-extrabold text-xl text-[#1C1C1C]">
-                  Collecting 8 points for discount
-                </h1>
-                <p class="font-medium text-base text-[#777777]">
-                  There are many variations of passages of Lorem Ipsum available.
-                </p>
-                <h1 class="font-bold text-base text-[#1C1C1C]">Learn More</h1>
-              </div>
+            <div class="p-4 space-y-4">
+              <p class="font-medium text-base text-[#777777]">Feb 05, 2027</p>
+              <h1 class="font-extrabold text-xl text-[#1C1C1C]">
+                Collecting 8 points for discount
+              </h1>
+              <p class="font-medium text-base text-[#777777]">
+                There are many variations of passages of Lorem Ipsum available.
+              </p>
+              <h1 class="font-bold text-base text-[#1C1C1C]">Learn More</h1>
             </div>
+          </div>
         </div>
       </section>
     </main>
-    <footer></footer>
+    <footer class="bg-gradient-to-r from-orange-50 to-orange-100 xl:pl-0 pl-4">
+      <section class="xl:max-w-screen-xl max-w-screen-sm mx-auto">
+        <div
+          class="xl:flex flex-row justify-between xl:pt-32 pt-20 xl:pb-24 pb-10 xl:space-y-0 space-y-3"
+        >
+          <div >
+            <img src="images/cup.png" alt="" />
+          </div>
+          <div class="xl:space-y-0 space-y-3 xl:flex flex-row items-center">
+            <p class="text-[#Dark 02] text-xl font-medium mr-10"
+              >Ready to get strated?</p
+            >
+            <button
+              class="p-5 text-xl font-bold text-[#FFFFFF] bg-gradient-to-r from-[#FF0000] to-[#FF8938] rounded-md"
+            >
+              Get Started
+            </button>
+          </div>
+        </div>
+
+        <div class="grid xl:grid-cols-4 grid-cols-1 xl:mb-24 mb-12">
+          <div>
+            <ul class="space-y-4 xl:mb-0 mb-4">
+              <li class="font-semibold text-xl">Quick Links</li>
+              <li>Home</li>
+              <li>About Us</li>
+              <li>Insurance</li>
+              <li>Privacy Policy</li>
+            </ul>
+          </div>
+          <div>
+            <ul class="space-y-4 xl:mb-0 mb-4">
+              <li class="font-semibold text-xl">Our Service</li>
+              <li>Life Insurance</li>
+              <li>Car Insurance</li>
+              <li>Health Insurance</li>
+              <li>House Insurance</li>
+            </ul>
+          </div>
+          <div>
+            <ul class="space-y-4 xl:mb-0 mb-4">
+              <li class="font-semibold text-xl">Help</li>
+              <li>FAQs</li>
+              <li>Contact Us</li>
+            </ul>
+          </div>
+
+          <div>
+            <h1 class="font-semibold text-2xl text-[#1C1C1C] mb-10">
+              Subscribe to our <br />newsletter
+            </h1>
+            <div class="mb-5 ">
+
+              <input placeholder="Email address" class="bg-transparent border-b-2 border-black w-4/6 ">
+              <i class="fa-solid fa-chevron-right bg-orange-600  rounded-full justify-center items-center w-7 h-7 text-white inline-flex"></i>
+            </div>
+          
+            <div class="flex space-x-6">
+              <img src="icons/facebook.png" alt="" class="max-w-5 grayscale" />
+              <img src="icons/twitter.png" alt="" class="max-w-5 grayscale" />
+              <img src="icons/instagram.png" alt="" class="max-w-5 grayscale" />
+            </div>
+          </div>
+        </div>
+
+        <p class="text-center xl:pb-32 pb-12">
+          © 2027 UIDesign.to - All rights reserved.
+        </p>
+      </section>
+    </footer>
   </body>
 </html>
