--- a/index.html
+++ b/index.html
@@ -18,18 +18,21 @@
       };
     </script>
 
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Manrope:wght@200..800&display=swap"
-      rel="stylesheet"
-    />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Manrope:wght@200..800&display=swap" rel="stylesheet">
     <script
       src="https://kit.fontawesome.com/7ea9f647cf.js"
       crossorigin="anonymous"
     ></script>
+    <style>
+      .font-manrope{
+        font-family: "Manrope", serif;
+       
+      }
+    </style>
   </head>
-  <body>
+  <body class="font-manrope">
     <header class="xl:max-w-screen-xl mx-auto mb-40">
       <section class="mt-16 xl:flex flex-row xl:ml-0 ml-2">
         <div class="space-y-7">
